tests/__snapshots__/api-toBeUniqueSymbol.test.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toBeUniqueSymbol: stderr 1`] = `
"Error: Type 'unique symbol' is not identical to type 'void'.

   9 |   expect(returnsUniqueSymbol()).type.toBeUniqueSymbol();
  10 | 
> 11 |   expect(returnsVoid()).type.toBeUniqueSymbol();
     |                              ^
  12 | });
  13 | 
  14 | test("is NOT unique symbol?", () => {

       at ./__typetests__/toBeUniqueSymbol.tst.ts:11:30 ❭ is unique symbol?

Error: Type 'unique symbol' is identical to type 'unique symbol'.

  15 |   expect(returnsVoid()).type.not.toBeUniqueSymbol();
  16 | 
> 17 |   expect(returnsUniqueSymbol()).type.not.toBeUniqueSymbol();
     |                                          ^
  18 | });
  19 | 

       at ./__typetests__/toBeUniqueSymbol.tst.ts:17:42 ❭ is NOT unique symbol?

"
`;

exports[`toBeUniqueSymbol: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

fail ./__typetests__/toBeUniqueSymbol.tst.ts
  × is unique symbol?
  × is NOT unique symbol?

Targets:    1 failed, 1 total
Test files: 1 failed, 1 total
Tests:      2 failed, 2 total
Assertions: 2 failed, 2 passed, 4 total
Duration:   <<timestamp>>

Ran all test files.
"
`;
